# blockgame

./: .gitignore  CMakeLists.txt  README.md
assets/data/blocks/: bedrock.yml  debug.yml  dirt.yml  grass.yml  nuke.yml  stone.yml  water.yml
assets/data/entities/: player.yml
assets/shaders/: chunk.frag  chunk.vert  hud.frag  hud.vert
assets/texture/: sprites.yaml
include/: bgutils.h  block.h  camera.h  chunk.h  core.h  entity.h  entity_type.h  hud.h  input.h  perlin.h  player.h  resource_manager.h  shader.h  stb_image.h  texture.h  window.h  world.h
include/physics/: aabb.h  collisions.h
include/rendering/: arraytexture.h  camera.h  shader.h  texture.h
include/world/: chunk.h  world.h
src/: bgutils.cpp  block.cpp  camera.cpp  chunk.cpp  entity.cpp  entity_type.cpp  hud.cpp  input.cpp  main.cpp  resource_manager.cpp  shader.cpp  texture.cpp  window.cpp  world.cpp
src/physics/: aabb.cpp  collisions.cpp
src/rendering/: arraytexture.cpp  camera.cpp  shader.cpp  texture.cpp
src/world/: chunk.cpp  world.cpp
